--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-br">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width">
+<title>Home | Minha pagina isaias</title>
+<link rel="stylesheet" href="style.css">
+</head>
+<body> 
+<!--Aqui abaixo é a parte do cabeçalho da minha página-->
+<header class="cabecalho">
+<img class="logo-cabecalho" src="logo.png" alt="Logo da minha página">
+<h1 class="titulo_da_pagina">minha página isaias</h1>
 
+
+</header>
+
+
+
+
+
+
+</body>
+
+
+
+
+</html>
